--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This is a java demo with maven and jenkins!!!
+This contains 3 projects that are needed for the demo for rws
+
+  * rws_javaClassicDemo; demonstrates how to build and deploy a simple java project to JBoss EAP using the jboss-as maven plugin
+  * rws_javaClassicDocker; demonstrates how to build and deploy a simple java project (based on the previous demo) but in stead of directly deploying to jboss...it will build this project on top of an existing docker image (an image that contains a running jboss) and create a new image with the deployment added as well, this is being to with the jolokia maven-docker plugin
+  * rws_Demo; demonstrates the usage of the following technologies: java/maven/docker/fabric8/kubernetes/openshift)....a simple java project, being build as a docker image, this docker image is being deployed with the fabric8 plugin, which is configured to deploy this docker image to a kubernetes/openshift environment. In stead of setting up a complete environment with atomic rhel/ openshift kubernetes and fabric8, there is a vagrant image available that delivers you a stack with all installed already....I am using this vagrant image in the demo as well:  http://fabric8.io/guide/getStartedVagrant.html
